Write manifest.json

--- a/popup.html
+++ b/popup.html
@@ -6,5 +6,10 @@
     <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <form>
+      <label><input placeholder="yen" /></label>
+      <button>convert</button>
+    </form>
+  </body>
 </html>
